--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -1,24 +1,49 @@
 <!DOCTYPE html>
-<html  
+<html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
-	<title>Tuirer</title>
+	<title>Bienvenido a Tuirer</title>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </h:head>
 <h:body>
-	<h1>Entrar</h1>
 	<h:form>
-		<div>
-			<label>E-Mail</label>
-			<h:inputText value="#{authMb.email}" />
-		</div>
-		<div>
-			<label>Password</label>
-			<h:inputSecret value="#{authMb.password}" />
-		</div>
-		<h:commandLink action="#{authMb.loggin()}" >
-			Entrar
-		</h:commandLink>
+		<nav>
+			<h:link value="Entrar" styleClass="btn btn-success" outcome="login" rendered="#{not authMb.logged}" />
+			<h:link value="Registrarse" styleClass="btn btn-info" outcome="register"  rendered="#{not authMb.logged}"/>
+			<h:commandLink value="Salir" styleClass="btn btn-danger" action="#{authMb.logout()}"   rendered="#{authMb.logged}"/>
+		</nav>
 	</h:form>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title">Login</h3>
+					</div>
+					<div class="panel-body">
+						<h:form>
+							<div class="form-group">
+								<label>Username</label>
+								<h:inputText value="#{authMb.username}" />
+							</div>
+							<div class="form-group">
+								<label>Password</label>
+								<h:inputSecret value="#{authMb.password}" />
+							</div>
+							<h:commandLink styleClass="btn btn-primary" action="#{authMb.loggin()}" >
+								Entrar
+							</h:commandLink>
+						</h:form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </h:body>
 </html>
