--- a/src/main/webapp/viewMine.xhtml
+++ b/src/main/webapp/viewMine.xhtml
@@ -24,7 +24,7 @@
 		<div class="panel panel-default">
 		  <div class="panel-heading">
 		    <h3 class="panel-title">
-		    	<h:outputText value="#{post.user.name}" />
+		    	<h:outputText value="#{post.user.username}" />
 		    	<small>
 		    		<h:outputText value="#{post.dateTime}">
 						<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
