--- a/src/main/webapp/register.xhtml
+++ b/src/main/webapp/register.xhtml
@@ -20,7 +20,7 @@
 						<h3 class="panel-title">Registrate</h3>
 					</div>
 					<div class="panel-body">
-						<h:form>
+						<h:form enctype="multipart/form-data" >
 							<div class="form-group">
 								<label>E-Mail</label>
 								<h:inputText value="#{registerMb.user.email}" styleClass="form-control" />
