--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -21,71 +21,68 @@
 		Bienvenido
 		<h:outputText value="#{authMb.currentUser.username}" />
 	</h1>
-
-	<h:form enctype="multipart/form-data" id="postForm">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">Nuevo tuity</h3>
-			</div>
-			<div class="panel-body">
-				<h:inputTextarea value="#{postMb.content}" styleClass="form-control"
-					id="postContent">
-				</h:inputTextarea>
-				<h:message for="postContent"></h:message>
-				<h:inputFile id="file" value="#{postMb.file}" />
-				<h:message for="file"></h:message>
-				<h:commandLink styleClass="btn btn-primary"
-					action="#{postMb.generate()}">
-		    		Publicar
-				</h:commandLink>
-			</div>
-		</div>
-	</h:form>
-	<h:panelGroup layout="block" id="obtainAll">
-		<ui:repeat var="post" value="#{postMb.obtainAll()}">
+	
+		<h:form enctype="multipart/form-data" id="postForm">
 			<div class="panel panel-default">
-
 				<div class="panel-heading">
-					<h3 class="panel-title">
-						<h:panelGroup id="imagen-profile">
-							<h:graphicImage rendered="#{post.user.hasProfileImage()}"
-								styleClass="img-avatar img-avatar96 img-avatar-thumb"
-								style="width:60px" value="/image/#{post.user.image.path}" />
-						</h:panelGroup>
-						<h:outputText value="#{post.user.username}" />
-						<small> 
-								<h:outputText value="#{post.dateTime}">
-								<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
-							</h:outputText>
-						</small>
-					</h3>
+					<h3 class="panel-title">Nuevo tuity</h3>
 				</div>
-
 				<div class="panel-body">
-					<h:outputText value="#{post.content}" />
-
-					<img src="/image/#{post.image.path}" />
-
-					<ul class="list-group">
-
-						<ui:repeat var="comment" value="#{commentMb.listByPost(post)}">
-							<li class="list-group-item"><strong> <h:outputText
-										value="#{comment.user.username}" />
-							</strong> <small> <h:outputText value="#{comment.date}">
-										<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
-									</h:outputText>
-							</small> <h:outputText value="#{comment.content}" /></li>
-						</ui:repeat>
-						<h:form>
-							<h:inputText value="#{commentMb.comment}"
-								styleClass="form-control" />
-							<h:commandLink styleClass="btn btn-primary"
-								action="#{commentMb.create(post)}">Comentar</h:commandLink>
-						</h:form>
-					</ul>
+					<h:inputTextarea value="#{postMb.content}" styleClass="form-control"
+						id="postContent">
+					</h:inputTextarea>
+					<h:message for="postContent"></h:message>
+					<h:inputFile id="file" value="#{postMb.file}" />
+					<h:message for="file"></h:message>
+					<h:commandLink styleClass="btn btn-primary"
+						action="#{postMb.generate()}">
+			    		Publicar
+					</h:commandLink>
 				</div>
 			</div>
-		</ui:repeat>
-	</h:panelGroup>
+		</h:form>
+		<h:panelGroup layout="block" id="obtainAll">
+			<ui:repeat var="post" value="#{postMb.obtainAll()}">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title">
+							<img src="/image/#{post.user.image.path}"
+									style="width: 50px; height: auto;" /> 
+							<h:outputText value="#{post.user.username}" />
+							<small> 
+									<h:outputText value="#{post.dateTime}">
+									<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
+								</h:outputText>
+							</small>
+						</h3>
+					</div>
+					<div class="panel-body">
+						<h:outputText value="#{post.content}" />
+						<img src="/image/#{post.image.path}" style="width: 100px; height: auto;" /> 
+						<ul class="list-group">
+								<h:form>
+								<h:outputText value="#{likeMb.amount(post)}"></h:outputText>
+								<h:commandLink styleClass="btn btn"
+									action="#{likeMb.like(post)}" id="like">Me gusta</h:commandLink>
+							</h:form>
+							<ui:repeat var="comment" value="#{commentMb.listByPost(post)}">
+								<li class="list-group-item"><strong> <h:outputText
+											value="#{comment.user.username}" />
+								</strong> <small> <h:outputText value="#{comment.date}">
+											<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
+										</h:outputText>
+								</small> <h:outputText value="#{comment.content}" /></li>
+							</ui:repeat>
+							<h:form>
+								<h:inputText value="#{commentMb.comment}"
+									styleClass="form-control" />
+								<h:commandLink styleClass="btn btn-primary"
+									action="#{commentMb.create(post)}">Comentar</h:commandLink>
+							</h:form>
+						</ul>
+					</div>
+				</div>
+			</ui:repeat>
+		</h:panelGroup>
 </h:body>
 </html>
